# TestProj

./: .gitignore
3DAirHockey/AirHockey/: CMakeLists.txt
3DAirHockey/AirHockey/Classes/: AppDelegate.cpp  Collision.cpp  Collision.h  ConsoleOut.cpp  ConsoleOut.h  NetworkLogic.cpp  NetworkLogic.h  OutputListener.h  Stage.cpp  Stage.h
3DAirHockey/AirHockey/Classes/Controller/: MouseCtl.cpp  MouseCtl.h  OPRT_Key.cpp  OPRT_Key.h  OPRT_Network.cpp  OPRT_Network.h  OPRT_State.cpp  OPRT_State.h  OPRT_Touch.cpp  OPRT_Touch.h
3DAirHockey/AirHockey/Classes/Effekseer/: EffectMng.cpp  EffectMng.h
3DAirHockey/AirHockey/Classes/Manager/: AnimMng.cpp  AnimMng.h  AppInfo.cpp  AppInfo.h  CCAudioMng.cpp  CCAudioMng.h  GameManager.cpp  GameManager.h  PointWithDepth.cpp  PointWithDepth.h
3DAirHockey/AirHockey/Classes/Scene/: GameScene.cpp  GameScene.h  GuestScene.cpp  GuestScene.h  HostScene.cpp  HostScene.h  ResultScene.cpp  ResultScene.h  TitleScene.cpp  TitleScene.h
3DAirHockey/AirHockey/Resources/Sound/SE/: ball.ckb  player.ckb  player.ckbx
3DAirHockey/AirHockey/Resources/effect/: Ball.efk
3DAirHockey/AirHockey/Resources/image/ball/: ball.plist
3DAirHockey/AirHockey/Resources/image/player/: player.psd
3DAirHockey/AirHockey/cocos2d/cocos/2d/: CCScene.h
3DAirHockey/AirHockey/cocos2d/cocos/2d/Debug.win32/libcocos2d.tlog/: CL.read.1.tlog  CL.write.1.tlog  libcocos2d.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3DAirHockey/AirHockey/cocos2d/cocos/editor-support/spine/proj.win32/Debug.win32/: libSpine.idb
3DAirHockey/AirHockey/cocos2d/cocos/editor-support/spine/proj.win32/Debug.win32/libSpine.tlog/: CL.10172.write.1.tlog  CL.10836.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libSpine.lastbuildstate
3DAirHockey/AirHockey/cocos2d/tools/simulator/frameworks/runtime-src/proj.android/jni/: Android.mk
3DAirHockey/AirHockey/proj.android/: gradle.properties
3DAirHockey/AirHockey/proj.android/app/: AndroidManifest.xml  build.gradle
3DAirHockey/AirHockey/proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
3DAirHockey/AirHockey/proj.android/app/src/sensor/cpp/: GyroSensor.java
3DAirHockey/AirHockey/proj.android/gradle/wrapper/: gradle-wrapper.properties
3DAirHockey/AirHockey/proj.win32/: AirHockey.sln  AirHockey.vcxproj  AirHockey.vcxproj.filters
